# notion-api-gateway-py

./: .env.example  .env.shared  .gitignore  README.deployment.md  README.md  pyproject.toml
deploy/: README.md  notion-gateway.service
deploy/launchd/: com.worxphere.notion-api-gateway-watchdog.plist  com.worxphere.notion-api-gateway.plist
src/notion_gateway/: __init__.py  __main__.py  config.py  doctor.py  types.py
src/notion_gateway/services/: notifier.py  notion_api.py  notion_browser.py  notion_internal_api.py  notion_records.py  page_id.py  request_processor.py  self_healing.py  slack_notifier.py  watchdog.py
tests/: test_cli.py  test_config.py  test_deploy_assets.py  test_notion_api.py  test_notion_browser.py  test_notion_internal_api.py  test_notion_records.py  test_page_id.py  test_request_processor.py  test_self_healing.py  test_slack_notifier.py  test_watchdog.py
