[project]
name = "notion-api-gateway"
version = "2.0.0"
description = "Notion API token provisioning automation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "playwright>=1.50",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "bedrock-agentcore",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
]

[project.scripts]
notion-gateway = "notion_gateway.__main__:main"

[tool.uv]
exclude-newer = "14 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/notion_gateway"]

[tool.hatch.build.targets.wheel]
packages = ["src/notion_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
